continuo implementazione parte grafica

--- a/index.html
+++ b/index.html
@@ -15,12 +15,42 @@
 <body>
     <main>
         <div id="top-bar">
-            <div class="main-container">
+            <div class="main-container" id="root">
                 <div class="nav-bar-left">
+                    <section id="top-status">
 
+                    </section>
+                    <section id="banner-notifiche">
+
+                    </section>
+                    <section id="input-container">
+                        <button id="cerca"><img src="img/lens.svg" id="lens"></button>
+                        <input type="search" name="cerca-contatto" id="find-user" placeholder="Cerca o inizia una nuova chat">
+                    </section>
+                    <section id="container">
+                        <div class="utenti">
+                            <div id="container-utente">
+                                <nav id="nav-left">
+                                    <img src="img/avatar_1.jpg" id="size" alt="">
+                                    <div id="informazioni-utente">
+                                        <h4>Michele</h4>
+                                        <p>Ultimo messaggio inviato</p>
+                                    </div>
+                                </nav>
+                                <nav id="nav-right">
+                                    <p>12:00</p>
+                                </nav>
+                            </div>
+                        </div>
+                        <section id="barra-laterale">
+                        </section>
+                    </section>
                 </div>
+                <!---->
                 <div class="messages-container">
-                    
+                    <div id="nav-top">
+
+                    </div>
                 </div>
             </div>
         </div>
