--- a/index.html
+++ b/index.html
@@ -18,10 +18,22 @@
             <div class="main-container" id="root">
                 <div class="nav-bar-left">
                     <section id="top-status">
-
+                        <nav>
+                            <img src="img/avatar_io.jpg" id="size-2" alt="">
+                            <span>Sofia</span>
+                        </nav>
+                        <nav class="nav-right">
+                            <i class="fa-solid fa-circle-notch" style="margin-right: 10px;"></i>
+                            <i class="fa-regular fa-message" style="margin-right: 10px;"></i>
+                            <i class="fa-solid fa-ellipsis-vertical" style="margin-right: 10px;"></i>
+                        </nav>
                     </section>
                     <section id="banner-notifiche">
-
+                        <div id="info">
+                            <i class="fas fa-bell-slash"></i>
+                            <span>Ricevi notifiche di nuovi messaggi</span> 
+                            <p>Attiva notifiche desktop</p>
+                        </div>
                     </section>
                     <section id="input-container">
                         <button id="cerca"><img src="img/lens.svg" id="lens"></button>
@@ -29,11 +41,11 @@
                     </section>
                     <section id="container">
                         <div class="utenti">
-                            <div id="container-utente">
-                                <nav id="nav-left">
-                                    <img src="img/avatar_1.jpg" id="size" alt="">
+                            <div id="container-utente" v-for="(element, index) in contacts">
+                                <nav class="nav-left">
+                                    <img :src="element.avatar" id="size" :alt="element.name">
                                     <div id="informazioni-utente">
-                                        <h4>Michele</h4>
+                                        <h4>{{element.name}}</h4>
                                         <p>Ultimo messaggio inviato</p>
                                     </div>
                                 </nav>
@@ -42,14 +54,50 @@
                                 </nav>
                             </div>
                         </div>
-                        <section id="barra-laterale">
-                        </section>
                     </section>
                 </div>
                 <!---->
                 <div class="messages-container">
                     <div id="nav-top">
-
+                        <nav class="nav-left">
+                            <img src="img/avatar_1.jpg" id="size-2" alt="">
+                            <div id="informazioni-utente">
+                                <h4 style="margin-top: 11px;">Michele</h4>
+                                <p>Ultimo accesso oggi alle 12:00</p>
+                            </div>
+                        </nav>
+                        <nav class="nav-right">
+                            <img src="img/lens.svg" style="width: 25px; margin-right: 5px;"></button>
+                            <i class="fa-solid fa-paperclip" style="width: 30px; padding: 9px;"></i>
+                            <i class="fa-solid fa-ellipsis-vertical" style="width: 30px; padding: 15px;"></i>
+                        </nav>
+                    </div>
+                    <div id="area-messaggi" v-for="(element, index) in contacts">
+                        <div id="mex-right">
+                            <ul id="mex-container">
+                                <li></li>
+                                <p>15:30</p>
+                            </ul>
+                            <ul id="mex-container">
+                                <li>prova</li>
+                                <p>15.30</p>
+                            </ul>
+                        </div>
+                        <div id="mex-left">
+                            <ul id="mex-container">
+                                <li>prova</li>
+                                <p>15:30</p>
+                            </ul>
+                            <ul id="mex-container">
+                                <li>prova</li>
+                                <p>15.30</p>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="nav-bottom">
+                        <i class="fas fa-smile" style="font-size: 26px; margin-right: 26px; vertical-align: sub;"></i>
+                        <input type="text" placeholder="Scrivi un messaggio" id="input-text">
+                        <i class="fas fa-microphone"></i>
                     </div>
                 </div>
             </div>
@@ -60,20 +108,6 @@
 
 
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <script src="js/main.js" type="text/javascript"></script>
 </body>
