corretto errore html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div id="nav-top">
                         <nav class="nav-left">
                             <img :src="'img/avatar' + contacts[activeUserId].avatar + '.jpg'" alt="contacts[activeUserId].name" class="size">
-                            <div id="informazioni-utente" v-if="activeUserId >= 0">
+                            <div id="informazioni-utente">
                                 <h4 style="margin-top: 11px;">{{contacts[activeUserId].name}}</h4>
                                 <p>Ultimo accesso oggi alle 12:00</p>
                             </div>
